:bug: consertando swagger
